MonetDB/src/mal/Tests/tst232.stable
# Monet Database Server V5.0
# Copyright (c) 1993-2002, CWI. All rights reserved.
# compiled for i686-pc-linux-gnu/32bit.
# gdk_dbfarm:/ufs/mk/monet_5-0/Linux/../dbfarm
# gdk_dbname:demo
# gdk_dbdir:/ufs/mk/monet_5-0/Linux/../dbfarm/demo
# gdk_distr:/ufs/mk/monet_5-0/Linux
# monetrc:/ufs/mk/.monet.conf
## a test checking BAT reference counting under various situations
#	b:= new(int,str);
#	i:= getBATrefcnt(b);
#	printf("refcount =%d\n",i);
#
#	insert(b,1,"bat B");
#	print(b);
#	i:= getBATrefcnt(b);
#	printf("refcount =%d\n",i);
#
#	bat.destroy(b);
#	i:= getBATrefcnt(b);
#	printf("after destroy refcount =%d\n",i);
#
function Admin.main():int;	#0:(main:int)
	b := mal.new(int,str);	#1:(b:bat[int,str])<-(int:int)(str:str)
	i := bat.getBATrefcnt(b);	#2:(i:int)<-(b:bat[int,str])
	system.printf("refcount =%d\n",i);	#3:($5:int)<-($6:str)(i:int)
	bat.insert(b,1,"bat B");	#4:($7:bat[int,str])<-(b:bat[int,str])($8:int)($9:str)
	io.print(b);	#5:($10:int)<-(b:bat[int,str])
	i := bat.getBATrefcnt(b);	#6:(i:int)<-(b:bat[int,str])
	system.printf("refcount =%d\n",i);	#7:($11:int)<-($6:str)(i:int)
	bat.destroy(b);	#8:($12:void)<-(b:bat[int,str])
	i := bat.getBATrefcnt(b);	#9:(i:int)<-(b:bat[int,str])
	system.printf("after destroy refcount =%d\n",i);	#10:($13:int)<-($14:str)(i:int)
end function;	#11:
refcount =1
#-------------------------#
# BAT:	  tmp_4		  #
# (int)	  (str)		  #
#-------------------------#
[ 1,	  "bat B"	  ]
refcount =2
#BBPreclaim: bat(4) view=0 mod=0 ref=2 stat=129
!ERROR: MALexception:bat.destroy:failed in bbp
>